# stock-trading-dashboard

./: .gitignore  README.md  StockTradingDashboardSpecificationforCodeGeneration.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.svelte  app.css  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/models/: detailed_analysis.rs  mod.rs  psychological_state.rs  stock_rating.rs  trade.rs
src-tauri/src/services/: db.rs  mod.rs  psychological_service.rs  stock_rating_service.rs  trade_service.rs
src/components/: RiskManagementDashboard.svelte  StockRatingDashboard.svelte  TradeCalendar.svelte
